tests/typing/good/testfile-arith-2.hs

main = let x = 1 == 2 in return ()
