tests/typing/bad/testfile-duplicate-5.hs

main =
  let f x x = 42 in
  putChar '\n'
